--- a/story.html
+++ b/story.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Completed Story</title>
     <script type="text/javascript" src="resources/js/main.js" defer></script>
-    <link rel="stylesheet" href="/resources/css/style.css">
+    <link rel="stylesheet" href="resources/css/style.css">
   </head>
   <body>
     <section id="top">
