--- a/index.html
+++ b/index.html
@@ -17,32 +17,32 @@
       <!--Add your form below:-->
       <form action="story.html" method="GET">
         <label for="animal-1">Animal:</label>
-        <input id="animal-1" type="text" name="animal-1" required>
+        <input id="animal-1" type="text" name="animal-1" required value="Bunny">
         <br>
         <label for="animal-2">Another Animal:</label>
-        <input id="animal-2" name="animal-2" type="text" required>
+        <input id="animal-2" name="animal-2" type="text" required value="Ant-Eater">
         <br>
         <label for="animal-3">One More Animal:</label>
-        <input type="text" id="animal-3" name="animal-3" required>
+        <input type="text" id="animal-3" name="animal-3" required value="Lobster">
         <br>
         <label for="adj-1">Adjective (past tense):</label>
-        <input type="text" id="adj-1" name="adj-1" required>
+        <input type="text" id="adj-1" name="adj-1" required value="frightened">
         <br>
         <label for="verb-1">Verb (ends in -ing):</label>
-        <input type="text" id="verb-1" name="verb-1" required>
+        <input type="text" id="verb-1" name="verb-1" required value="singing">
         <br>
         <label for="num-1">Number:</label>
-        <input type="number" id="num-1" name="num-1" required>
+        <input type="number" id="num-1" name="num-1" required min="1" max="15" value="1">
         <br>
         <span>Yes or No:</span>
-        <input id="yes" type="radio" name="answer" value="yes" required>
+        <input id="yes" type="radio" name="answer" value="yes" required checked>
         <label for="yes">Yes</label>
         <input id="no" type="radio" name="answer" value="no" required>
         <label for="no">No</label>
         <br>
         <label for="speed">Relative speed (ends in -er):</label>
         <select id="speed" name="speed" required><br>
-          <option value="slower">Slower</option>
+          <option value="slower" selected>Slower</option>
           <option value="faster">Faster</option>
           <option value="speedier">Speedier</option>
       </select>
@@ -50,12 +50,12 @@
         <label for="quote">Motivational Quote:</label>
         <input id="quote" name="quote" type="text" required list="quote-choices">
         <datalist id="quote-choices">       
-          <option value="Boom baby"></option>
+          <option value="Boom baby" selected></option>
           <option value="Let's get it"></option>
         </datalist>
         <br>
         <label for="message">Meaningful Message:</label>
-        <textarea id="message" name="message" required rows="8" cols="40"></textarea>
+        <textarea id="message" name="message" required rows="8" cols="40" minlength="10" maxlength="135"></textarea>
         <br>
 
 
